--- a/src/app/shared/components/navigation-sidenav/navigation-sidenav.component.html
+++ b/src/app/shared/components/navigation-sidenav/navigation-sidenav.component.html
@@ -1,1 +1,33 @@
-<p>navigation-sidenav works!</p>
+<ul class="navigation-sidenav">
+    <li>
+        <button mat-button class="menu-button">
+            <mat-icon>person</mat-icon>
+            <span>Mi perfil</span>
+        </button>
+    </li>
+    <li>
+        <button mat-button class="menu-button">
+            <mat-icon>person_add</mat-icon>
+            <span>Registrarse</span>
+        </button>
+    </li>
+    <li>
+        <button mat-button class="menu-button">
+            <mat-icon>login</mat-icon>
+            <span>Iniciar sesión</span>
+        </button>
+    </li>
+    <li>
+        <button mat-button class="menu-button">
+            <mat-icon>description</mat-icon>
+            <span>Mis publicaciones</span>
+        </button>
+    </li>
+    <li>
+        <button mat-button class="menu-button">
+            <mat-icon>control_point</mat-icon>
+            <span>Crear publicación</span>
+        </button>
+    </li>
+</ul>
+<!-- <mat-divider></mat-divider> -->
