--- a/src/assets/styles/_index.scss
+++ b/src/assets/styles/_index.scss
@@ -1,7 +1,8 @@
 // Design variables
 @import './design/colors';
+@import './helpers/display';
 
 // Typography
-* {
-    font-family: 'Manrope', 'Roboto', sans-serif;
-}
+// * {
+//     font-family: 'Manrope', 'Roboto', sans-serif;
+// }
