--- a/src/assets/styles/design/_colors.scss
+++ b/src/assets/styles/design/_colors.scss
@@ -1,7 +1,11 @@
 :root {
     // Colors
-    --accent-color: #FFD171;
+    --primary-color: #7c4dff;
+    // --accent-color: #FFD171;
+    --accent-color: #ffd080;
+    --warn-color: #ff5252;
     
+    --purple-color: #AF63FF;
     --green-dark-color: #235633;
 
     // Buttons
