--- a/src/app/shared/components/navbar/navbar.component.html
+++ b/src/app/shared/components/navbar/navbar.component.html
@@ -25,9 +25,9 @@
     <button mat-icon-button (click)="openSidenav()">
         <mat-icon>menu</mat-icon>
     </button>
-    <div class="logo">
+    <!-- <div class="logo">
         <span>Planishare</span>
-    </div>
+    </div> -->
     <app-search-button [simpleIcon]="true"></app-search-button>
 </nav>
 
