--- a/src/app/features/homepage/homepage/homepage.component.scss
+++ b/src/app/features/homepage/homepage/homepage.component.scss
@@ -1,6 +1,4 @@
 :host {
-    // background-color: var(--accent-color); // Temporal
-
     display: flex;
     flex-direction: column;
 
@@ -8,9 +6,11 @@
 
     // background-image: url('../../../../assets/images/bg-desktop-orange.png');
     background-image: url('../../../../assets/images/bg-desktop-yellow.png');
+    // background-color: var(--accent-color);
     background-size: cover;
     background-attachment: fixed;
-    background-position: center;
+
+    background-position: left; // mobile
 }
 
 .header {
@@ -21,9 +21,19 @@
     min-height: 100vh;
 }
 
-.container {
-    display: grid;
-    place-items: center;
+.container1, .container2 {
+    flex-grow: 1;
+    
+    display: flex;
+    flex-direction: column;
+}
+
+.container1 {
+    justify-content: flex-end;
+}
+
+.container2 {
+    justify-content: center;
 }
 
 .logo {
@@ -34,10 +44,11 @@
     h1 {
         display: inline;
         
+        box-shadow: 0px 1px 3px #303030;
         background-color: var(--green-dark-color);
         
         color: var(--light-text);
-        // font-size: 5rem;
+        font-size: clamp(2rem, -0.2500rem + 10vw, 5rem);
         font-weight: 500;
         
         padding: 0.6em 1em;
@@ -47,25 +58,53 @@
     }
 }
 
-.subtitle {
-    text-align: center;
-    font-weight: 500;
+.subtitle1 {
+    h2 {
+        background-color: rgba($color: #fafafa, $alpha: 0.3);
+        text-align: center;
+        font-weight: 500;
+    }
 }
 
 .filters {
     display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
     gap: 0.5em;
 }
 
 .scroll-text {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+
     text-align: center;
-    font-weight: bold;
+    font-weight: 700;
+}
+
+.subtitle2 {
+    margin: 0 1rem;
+    
+    h2 {
+        backdrop-filter: blur(2px);
+        background-color: rgba($color: #fafafa, $alpha: 0.3);
+        
+        padding: 0.5rem;
+
+        font-size: 1rem;
+        line-height: 1.2;
+
+        text-align: center;
+        font-weight: 500;
+
+    }
 }
 
 .main {
     display: grid;
-    // TODO: Revisar si 24rem está bien
-    grid-template-columns: repeat(auto-fit, minmax(min(100%, 24rem), 1fr));
+    grid-template-columns: repeat(auto-fit, minmax(min(100%, 24rem), 35rem));
+    justify-content: center;
     gap: 1.5rem;
     padding: 0 1.2rem 1.2rem 1.2rem;
 }
@@ -80,13 +119,13 @@
     color: var(--light-text);
 
     border-radius: 10px;
+    box-shadow: 0px 1px 3px #303030;
 
     padding: 1rem 0;
     margin-bottom: 0.5rem;
 
     h4 {
-        // TODO
-        font-size: 1.5rem;
+        font-size: 1rem;
         font-weight: 500;
 
         padding: 0;
