fix(login, register): fix responsive

--- a/src/app/features/auth/login/login.component.html
+++ b/src/app/features/auth/login/login.component.html
@@ -10,9 +10,9 @@
         <h1>Planishare</h1>
     </div>
     
-    <div class="card">
-        <mat-card>
-            <mat-card-title>Que bueno tenerte de vuelta!</mat-card-title>
+    <div class="container">
+        <mat-card class="card">
+            <mat-card-title class="card-title">Iniciar sesión</mat-card-title>
             <mat-card-content>
                 <form class="form">
                     <mat-form-field appearance="outline">
@@ -41,7 +41,7 @@
                             <mat-icon>login</mat-icon>
                             Iniciar sesión
                         </button>
-                        <span>o</span>
+                        <span>- o -</span>
                         <button mat-stroked-button>
                             <mat-icon>login</mat-icon>
                             Continuar con google
