--- a/src/app/features/auth/register/register.component.html
+++ b/src/app/features/auth/register/register.component.html
@@ -10,9 +10,10 @@
         <h1>Planishare</h1>
     </div>
     
-    <div class="card">
-        <mat-card>
-            <mat-card-title>Registrate para poder crear publicaciones, dar likes y mucho más, anímate!</mat-card-title>
+    <div class="container">
+        <mat-card class="card">
+            <mat-card-title class="card-title">Registrarse</mat-card-title>
+            <!-- <mat-card-title>Registrate para poder crear publicaciones, dar likes y mucho más, anímate!</mat-card-title> -->
             <mat-card-content>
                 <form class="form">
                     <mat-form-field appearance="outline">
