--- a/src/assets/styles/design/_colors.scss
+++ b/src/assets/styles/design/_colors.scss
@@ -6,6 +6,7 @@
     --warn-color: #ff5252;
     
     --purple-color: #AF63FF;
+    --purple-dark-color: #563F97;
     --green-dark-color: #235633;
 
     // Buttons
