--- a/src/app/features/auth/login/login.component.scss
+++ b/src/app/features/auth/login/login.component.scss
@@ -1,11 +1,13 @@
 :host {
-    display: block;
+    display: flex;
+    flex-direction: column;
+
     height: 100%;
 
     // background-color: var(--primary-color);
     background-image: url('../../../../assets/images/bg-desktop-blue.png');
     background-size: cover;
-    background-position: center;
+    background-position: left;
 }
 
 .navbar {
@@ -15,30 +17,54 @@
     padding: 1rem;
 }
 
+.main {
+    margin-top: 2rem;
+    padding: 0 1.2rem 1.2rem 1.2rem;
+}
+
 .logo {
     display: flex;
     justify-content: center;
-    margin-bottom: 1rem;
     
     h1 {
         display: inline;
         
-        background-color: rgba($color: #000000, $alpha: 0.5);
+        box-shadow: 0px 1px 3px #303030;
+        background-color: var(--purple-dark-color);
         
         color: var(--light-text);
-        // font-size: 5rem;
+        font-size: clamp(2rem, -0.2500rem + 10vw, 5rem);
         font-weight: 500;
         
         padding: 0.6em 1em;
-        margin: 0;
+        // margin: 0;
         
         border-radius: 15px;
     }
 }
 
-.card {
+.container {
     display: flex;
     justify-content: center;
+}
+
+.card {
+    flex-basis: 700px;
+
+   > mat-card-title {
+       padding-top: 1rem;
+   }
+    
+    > mat-card-content {
+        padding: 1rem;
+    }
+}
+
+.card-title {
+    text-align: center;
+    font-weight: 500;
+
+    margin-bottom: 1rem;
 }
 
 .form {
@@ -49,4 +75,5 @@
 .buttons {
     display: grid;
     place-items: center;
+    gap: 0.5rem;
 }
