--- a/src/app/shared/components/navigation-sidenav/navigation-sidenav.component.html
+++ b/src/app/shared/components/navigation-sidenav/navigation-sidenav.component.html
@@ -6,13 +6,13 @@
         </button>
     </li>
     <li>
-        <button mat-button class="menu-button">
+        <button mat-button class="menu-button" [routerLink]="['/auth/register']">
             <mat-icon>person_add</mat-icon>
             <span>Registrarse</span>
         </button>
     </li>
     <li>
-        <button mat-button class="menu-button">
+        <button mat-button class="menu-button" [routerLink]="['/auth/login']">
             <mat-icon>login</mat-icon>
             <span>Iniciar sesión</span>
         </button>
