fix(homepage, nav): repsonsive fix

--- a/src/app/features/homepage/homepage/homepage.component.html
+++ b/src/app/features/homepage/homepage/homepage.component.html
@@ -15,9 +15,12 @@
       </h2>
     </div>
     <div class="filters">
-      <button mat-raised-button>Nivel académico</button>
+      <!-- <app-rounded-select></app-rounded-select> -->
+      <!-- <app-rounded-select></app-rounded-select> -->
+      <!-- <app-rounded-select></app-rounded-select> -->
+      <!-- <!-- <button mat-raised-button>Nivel académico</button> -->
       <button mat-raised-button>Asignatura</button>
-      <button mat-raised-button>Eje</button>
+      <button mat-raised-button>Eje</button> -->
     </div>  
   </div>
 
