--- a/src/app/features/homepage/homepage/homepage.component.scss
+++ b/src/app/features/homepage/homepage/homepage.component.scss
@@ -85,7 +85,7 @@
         backdrop-filter: blur(2px);
         background-color: rgba($color: #fafafa, $alpha: 0.3);
         
-        padding: 0.5rem;
+        padding: 0.5em;
 
         font-size: 1rem;
         line-height: 1.2;
