--- a/src/app/shared/components/navigation-sidenav/navigation-sidenav.component.html
+++ b/src/app/shared/components/navigation-sidenav/navigation-sidenav.component.html
@@ -1,30 +1,30 @@
 <ul class="navigation-sidenav">
     <li>
-        <button mat-button class="menu-button">
+        <button mat-button class="menu-button" (click)="hideSidenav()">
             <mat-icon>person</mat-icon>
             <span>Mi perfil</span>
         </button>
     </li>
     <li>
-        <button mat-button class="menu-button" [routerLink]="['/auth/register']">
+        <button mat-button class="menu-button" [routerLink]="['/auth/register']" (click)="hideSidenav()">
             <mat-icon>person_add</mat-icon>
             <span>Registrarse</span>
         </button>
     </li>
     <li>
-        <button mat-button class="menu-button" [routerLink]="['/auth/login']">
+        <button mat-button class="menu-button" [routerLink]="['/auth/login']" (click)="hideSidenav()">
             <mat-icon>login</mat-icon>
             <span>Iniciar sesión</span>
         </button>
     </li>
     <li>
-        <button mat-button class="menu-button">
+        <button mat-button class="menu-button" (click)="hideSidenav()">
             <mat-icon>description</mat-icon>
             <span>Mis publicaciones</span>
         </button>
     </li>
     <li>
-        <button mat-button class="menu-button">
+        <button mat-button class="menu-button" (click)="hideSidenav()">
             <mat-icon>control_point</mat-icon>
             <span>Crear publicación</span>
         </button>
