--- a/src/app/features/homepage/homepage/homepage.component.scss
+++ b/src/app/features/homepage/homepage/homepage.component.scss
@@ -4,6 +4,7 @@
     justify-content: center;
 
     background-image: url('../../../../assets/images/bg-desktop-yellow.png');
+    // background-image: url('../../../../assets/images/bg-desktop-dark.png');
     // background-size: cover;
     background-size: contain;
     background-attachment: fixed;
