--- a/src/app/shared/components/search-dialog/search-dialog.component.scss
+++ b/src/app/shared/components/search-dialog/search-dialog.component.scss
@@ -1,5 +1,5 @@
 .search-field {
-    display: block;
+    width: 100%;
 }
 
 .filters {
@@ -7,6 +7,11 @@
     align-content: center;
     align-items: center;
     justify-content: center;
+    gap: 1rem;
+}
+
+.filter {
+    width: 100%;
 }
 
 .actions-section {
@@ -16,8 +21,4 @@
     button {
         border-radius: 30px;
     }
-}
-
-.academic-level-select, .subject-select, .axis-select {
-    width: 100%;
 }
