--- a/src/assets/styles/helpers/_display.scss
+++ b/src/assets/styles/helpers/_display.scss
@@ -33,9 +33,9 @@
 //   align-items: flex-end;
 // }
 
-// .flex_column {
-//   flex-direction: column;
-// }
+.flex_column {
+  flex-direction: column;
+}
 
 // .flex_column_start {
 //   flex-direction: column;
