--- a/src/app/shared/components/rounded-select-search/rounded-select-search.component.html
+++ b/src/app/shared/components/rounded-select-search/rounded-select-search.component.html
@@ -1,17 +1,23 @@
 <button
   class="button-toggle-select"
   mat-raised-button
+  [ngStyle]="buttonStyle"
   (click)="toggleSelect(custom_select)">
-    <span>Nivel académico</span>
+    <span>{{ _buttonText }}</span>
     <mat-icon>expand_more</mat-icon>
 </button>
 
-<mat-form-field appearance="fill" class="select-hidden">
-  <mat-label>Nivel académico</mat-label>
-  <mat-select [(value)]="value" disableOptionCentering #custom_select>
+<mat-form-field>
+  <mat-label>{{ _buttonText }}</mat-label>
+  <mat-select [formControl]="control" disableOptionCentering #custom_select>
       <mat-option>
-        <ngx-mat-select-search></ngx-mat-select-search>
+        <ngx-mat-select-search
+          [disableInitialFocus]="true"
+          [formControl]="search"
+          placeholderLabel="{{ placeholder }}"
+          noEntriesFoundLabel="No se encontraron resultados">
+        </ngx-mat-select-search>
       </mat-option>
-      <mat-option [value]="option" *ngFor="let option of list">{{ option }}</mat-option>
+      <mat-option [value]="option" *ngFor="let option of _list">{{ option.text }}</mat-option>
   </mat-select>
 </mat-form-field>
