--- a/src/app/shared/components/rounded-select-search/rounded-select-search.component.scss
+++ b/src/app/shared/components/rounded-select-search/rounded-select-search.component.scss
@@ -1,7 +1,7 @@
 app-rounded-select-search {
     display: flex;
     flex-direction: column;
-    border: 1px black solid;
+    // border: 1px black solid;
     position: relative;
 
     mat-form-field {
@@ -23,7 +23,7 @@ app-rounded-select-search {
         display: block;
         width: 100%;
 
-        border-radius: 10px;
+        border-radius: 20px;
     }
 }
 
@@ -35,6 +35,9 @@ app-rounded-select-search {
     .cdk-overlay-connected-position-bounding-box {
         align-items: center;
         justify-content: center;
-    }    
+    }
+    // .cdk-overlay-connected-position-bounding-box {
+
+    // }
 }
 
