--- a/src/app/features/homepage/homepage/homepage.component.scss
+++ b/src/app/features/homepage/homepage/homepage.component.scss
@@ -56,6 +56,7 @@
 
 .subtitle1 {
     h2 {
+        padding: 0.7em 0;
         background-color: rgba($color: #fafafa, $alpha: 0.3);
         text-align: center;
         font-weight: 500;
@@ -114,7 +115,7 @@
     text-align: center;
     color: var(--light-text);
 
-    border-radius: 10px;
+    border-radius: 5px;
     box-shadow: 0px 1px 3px #303030;
 
     padding: 1rem 0;
