--- a/src/app/shared/components/rounded-select-search/rounded-select-search.component.html
+++ b/src/app/shared/components/rounded-select-search/rounded-select-search.component.html
@@ -3,7 +3,7 @@
   mat-raised-button
   [ngStyle]="buttonStyle"
   (click)="toggleSelect(custom_select)">
-    <span>{{ _buttonText }}</span>
+    <span>{{ _buttonText ?? buttonText }}</span>
     <mat-icon>expand_more</mat-icon>
 </button>
 
@@ -18,6 +18,8 @@
           noEntriesFoundLabel="No se encontraron resultados">
         </ngx-mat-select-search>
       </mat-option>
+      <mat-option *ngIf="!!control.value" [value]="null">Borrar</mat-option>
+      <mat-divider></mat-divider>
       <mat-option [value]="option" *ngFor="let option of _list">{{ option.text }}</mat-option>
   </mat-select>
 </mat-form-field>
