--- a/src/app/shared/components/search-button/search-button.component.html
+++ b/src/app/shared/components/search-button/search-button.component.html
@@ -1,6 +1,6 @@
 <button mat-raised-button *ngIf="!simpleIcon" (click)="openSearchDialog()">
     <mat-icon>search</mat-icon>
-    Buscar
+    <!-- Buscar -->
 </button>
 
 <button mat-icon-button *ngIf="simpleIcon" (click)="openSearchDialog()">
